--- a/backend/event-app/src/main/resources/application.properties
+++ b/backend/event-app/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=event
 spring.datasource.url=jdbc:postgresql://localhost:5432/event
 spring.datasource.username=postgres
-spring.datasource.password=123456
+spring.datasource.password=anhduc69
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 # JPA / Hibernate
