--- a/backend/event-app/src/test/resources/application.properties
+++ b/backend/event-app/src/test/resources/application.properties
@@ -1,12 +1,10 @@
-spring.datasource.url=jdbc:h2:mem:eventdb;MODE=PostgreSQL;DB_CLOSE_DELAY=-1
-spring.datasource.driver-class-name=org.h2.Driver
-spring.datasource.username=sa
-spring.datasource.password=
+spring.datasource.url=${SPRING_DATASOURCE_URL}
+spring.datasource.username=${SPRING_DATASOURCE_USERNAME}
+spring.datasource.password=${SPRING_DATASOURCE_PASSWORD}
 
-spring.jpa.hibernate.ddl-auto=create-drop
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
-spring.jpa.show-sql=false
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 
-jwt.secret=TestSecretKeyTestSecretKeyTestSecretKey123
-jwt.expiration=3600000
+jwt.secret=${JWT_SECRET}
 
+server.port=${PORT:8080}
