--- a/backend/event-app/src/main/resources/application.properties
+++ b/backend/event-app/src/main/resources/application.properties
@@ -7,7 +7,7 @@
 # --- AFTER (PostgreSQL) ---
 spring.datasource.url=jdbc:postgresql://localhost:5432/event
 spring.datasource.username=postgres
-spring.datasource.password=30092004
+spring.datasource.password=123456
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 # JPA/Hibernate
